# Chaturanga

./: .gitignore  Ashtapada.cpp  CMakeLists.txt  Chal.cpp  commandline.cpp
ChaturangaCPP/: Ashtapada.cpp  CMakeLists.txt  Chal.cpp  Chal.h  Chaturanga.cpp  Evaluator.cpp  LinkedList.h  NatvisFile.natvis  NitiAyog.cpp  NitiAyog.h  Position.cpp  Position.h  ReleaseCheck.h  Store.h  pieces.cpp  pieces.h  storage.h
ChaturangaCPP/include/: Ashtapada.h  Chal.h  Evaluator.h  LRU.h  NitiAyog.h  Position.h  commandline.h  pieces.h
ChaturangaCPP2/: CMakeLists.txt  chaturanga.cpp  commandline.cpp
ChaturangaCPP2/include/: ashtapada.h  core.h
include/: Ashtapada.h  Chal.h  Evaluator.h  LinkedList.h  NitiAyog.h  Position.h  commandline.h  pieces.h  version.h.in
